--- a/src/components/ReviewItem/ReviewItem.css
+++ b/src/components/ReviewItem/ReviewItem.css
@@ -13,6 +13,20 @@
   height: 91px;
   border-radius: 81px;
 }
+.name-quantity{
+    display: flex;
+    align-items: center;
+}
+.quantity{
+    background-color: #FF9900;
+    border-radius: 50%;
+    height: 25px;
+    width: 25px;
+    text-align: center;
+    color: white;
+    font-weight: bold;
+    margin-left: 6px;
+}
 .review-details-button{
     display: flex;
     justify-content: space-between;
