--- a/src/components/ReviewItem/ReviewItem.css
+++ b/src/components/ReviewItem/ReviewItem.css
@@ -13,33 +13,44 @@
   height: 91px;
   border-radius: 81px;
 }
-.name-quantity{
-    display: flex;
-    align-items: center;
+.name-quantity {
+  display: flex;
+  align-items: center;
 }
-.quantity{
-    background-color: #FF9900;
-    border-radius: 50%;
-    height: 25px;
-    width: 25px;
-    text-align: center;
-    color: white;
-    font-weight: bold;
-    margin-left: 6px;
+.quantity {
+  background-color: #ff9900;
+  border-radius: 50%;
+  height: 25px;
+  width: 25px;
+  text-align: center;
+  color: white;
+  font-weight: bold;
+  margin-left: 6px;
 }
-.review-details-button{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    margin: 0 5px;
+.review-details-button {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  margin: 0 5px;
 }
-.review-details p, .review-details h3{
-    margin: 4px 0;
+.review-details p,
+.review-details h3 {
+  margin: 4px 0;
 }
-.review-details p{
-    font-size: 18px;
+.review-details p {
+  font-size: 18px;
 }
-.color{
-    color: #FF9900
+.delete-button {
+  background: rgba(235, 87, 87, 0.3);
+  color: #eb5757;
+  width: 31px;
+  height: 31px;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 30px;
+  border: none;
+}
+.color {
+  color: #ff9900;
 }
